api-livraria/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-livraria
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-livraria
    template:
      metadata:
        labels:
          app: api-livraria
      specs:
        imagePullSecret:
        - name: regcred

        containers:
        - name: api-livraria
          image: harbor.homelab.local/api-livraria/api-livraria:latest
          imagePullPolicy: ALways
          ports:
          - containerPort: 8080
