api-livraria/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-livraria-svc
  namespace: default
spec:
  selector:
    app: api-livraria
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
