api-livraria/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-livraria-ingress
  namespace: default
spec:
  rules:
  - host: livraria.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-livraria-svc 
            port:
              number: 80
